add smsotp auth provider and phone_number field on user

--- a/api/src/database/system-data/fields/users.yaml
+++ b/api/src/database/system-data/fields/users.yaml
@@ -19,6 +19,12 @@ fields:
       iconRight: email
     width: half
 
+  - field: phone_number
+    interface: input
+    options:
+      iconRight: phone
+    width: half
+
   - field: password
     special:
       - hash
