--- a/api/package.json
+++ b/api/package.json
@@ -121,6 +121,7 @@
 		"graphql-ws": "5.14.3",
 		"helmet": "7.1.0",
 		"icc": "3.0.0",
+		"ikoddi-client-sdk": "^1.1.1",
 		"inquirer": "9.2.12",
 		"ioredis": "5.3.2",
 		"ip-matching": "2.1.2",
