--- a/api/src/database/seeds/03-users.yaml
+++ b/api/src/database/seeds/03-users.yaml
@@ -16,6 +16,11 @@ columns:
     length: 128
     nullable: false
     unique: true
+  phone_number:
+    type: string
+    length: 128
+    nullable: true
+    unique: true
   password:
     type: string
     length: 255
